<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".FragmentADD">

    <TextView
        android:id="@+id/tvTitleActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/add_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSetPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/choose_priority"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/switchStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleActivity"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/plainTextSetTitle"
        android:layout_width="296dp"
        android:layout_height="44dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toEndOf="@+id/tvTitleActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgSetPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/tvSetPriority"
        app:layout_constraintTop_toBottomOf="@+id/plainTextSetTitle"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbPriorityBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_State_Big" />

        <RadioButton
            android:id="@+id/rbPriorityMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_State_Medium" />

        <RadioButton
            android:id="@+id/rbPriorityLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_State_Low" />
    </RadioGroup>

    <Switch
        android:id="@+id/switchStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/set_State"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSetPriority"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_add_fragment_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchStatus"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/action_delete_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_add_fragment_add"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchStatus"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>